themes/nox/public/main.css
/* ... */
.topic_list_title_block .pre_opt:before {
	content: "{{index .Phrases "topics_click_topics_to_select"}}";
	font-size: 17px;
	margin-right: 20px;
}
.topic_list_title_block .opt a {
	color: #afafaf;
	margin-left: 8px;
	white-space: nowrap;
}
.topic_list_title_block .create_topic_opt a:before {
	content: "Create Topic";
}
.topic_list_title_block .mod_opt a:before {
	content: "Moderate";
}

.filter_opt {
	margin-right: auto;
}
.filter_opt_label {
	font-size: 18px;
	margin-left: 5px;
}
.filter_opt_pointy {
	margin-left: -5px;
}
.link_select {
	background: #333333;
	background-color: #444444;
	position: absolute;
	border: 1px solid #333333;
	padding: 16px;
	padding-top: 10px;
	padding-bottom: 10px;
	margin-top: 2px;
}
.link_select .link_option a {
	margin-left: 0px;
}

.topic_row:not(:last-child) {
	margin-bottom: 8px;
}
.topic_row {
	border-radius: 3px;
	background-color: #444444;
	display: flex;
}
.topic_left, .topic_right, .topic_middle {
	padding: 16px;
	padding-bottom: 10px;
	padding-top: 16px;
	display: flex;
	width: 33%;
}
.topic_middle {
	line-height: 20px;
}
.topic_left {
	margin-right: auto;
}
.topic_sticky .topic_left {
	border-left: 3px solid rgb(215, 155, 0);
	border-radius: 3px;
}
.topic_closed .topic_left {
	border-left: 3px solid grey;
	border-radius: 3px;
}
.topic_closed {
	background-color: #4b4b4b;
}
.topic_selected {
	background-color: rgb(68, 68, 88);
}
.new_item .topic_left {
	border-left: 3px solid rgb(215, 215, 215);
	border-radius: 3px;
}
.topic_left img, .topic_right img {
	border-radius: 24px;
	height: 38px;
	width: 38px;
	margin-right: 10px;
}
.topic_inner_left {
	display: flex;
	flex-direction: column;
	width: 92%;
}
.topic_inner_left .rowtopic {
	white-space: nowrap;
	text-overflow: ellipsis;
    overflow: hidden;
}
.topic_inner_left .parent_forum {
	display: none; /* Comment this until we figure out how to make it work */
}
.topic_right_inside {
	display: flex;
	margin-left: auto;
	width: 180px;
}
.topic_right_inside .lastName, .topic_left .rowtopic {
	font-size: 15px !important;
	line-height: 22px;
	margin-top: -2px;
}
.topic_right_inside .lastReplyAt, .topic_left .starter {
	font-size: 14px;
	line-height: 14px;
}
.topic_right_inside span {
	display: flex;
	flex-direction: column;
}
.topic_inner_left br,
.topic_right_inside br,
.topic_inner_right,
.topic_list:not(.topic_list_mostviewed) .topic_middle .viewCount,
.topic_list_mostviewed .topic_middle .likeCount {
	display: none;
}
.topic_middle_inside {
	display: flex;
	flex-direction: column;
	margin-left: auto;
	margin-right: auto;
	margin-top: -3px;
	width: 80px;
}
.topic_status_e {
	display: none;
}

/* TODO: Make a generic version of this so that we can have more blocks which are initially hidden but flip over to visible under certain conditions */
.more_topic_block_initial {
	display: none;
}
.more_topic_block_active {
	display: block;
}

input, select, button, .formbutton, .panel_right_button:not(.has_inner_button), textarea {
	border-radius: 3px;
	background: rgb(90,90,90);
	color: rgb(200,200,200);
	border: none;
	padding: 4px;
}
input:focus, select:focus, textarea:focus {
	outline: 1px solid rgb(120,120,120);
}
input:not(input[type=search]):not(input[type=submit]) {
	background-image: url(./fa-svg/pencil-alt.svg);
	background-size: 12px;
	background-repeat: no-repeat;
	background-position: right 10px bottom 9px;
	background-position-x: right 10px;
}
input {
	padding: 5px;
	padding-bottom: 3px;
	font-size: 16px;
}
input, select {
	margin-left: 3px;
	margin-bottom: 4px;
}
button, .formbutton, .panel_right_button:not(.has_inner_button) {
	background: rgb(110,110,210);
	color: rgb(250,250,250);
	font-family: "Segoe UI";
	font-size: 15px;
	text-align: center;
	padding: 6px;
}
.formlabel {
	margin-bottom: 4px;
}
/*.formlabel + .formitem {
	margin-left: 4px;
}*/
.formrow {
	margin-bottom: 6px;
}
.form_button_row {
	margin-top: 10px;
}
.formitem a {
	margin-bottom: 5px;
	display: block;
}

.login_mfa_token_row .formlabel {
	display: none;
}

.pageset {
    display: flex;
    margin-top: 8px;
}

.pageitem {
	font-size: 17px;
	border-radius: 3px;
	background-color: #444444;
	padding: 7px;
	margin-right: 6px;
}

#prevFloat, #nextFloat {
	display: none;
}
.forum_list .rowitem {
	margin-bottom: 8px;
	display: flex;
}
.forum_list .forum_left {
	margin-left: 8px;
}
.forum_list .forum_nodesc {
	font-style: italic;
}
.forum_list .forum_right {
	display: flex;
	margin-left: auto;
	margin-right: 8px;
	padding-top: 2px;
	width: 140px;
}
.forum_list .forum_right img {
	margin-right: 10px;
	margin-top: 2px;
}
.forum_list .forum_right span {
	line-height: 19px;
}
.forum_list .forum_right span a {
	white-space: nowrap;
}
.extra_little_row_avatar {
	border-radius: 24px;
	height: 36px;
	width: 36px;
}

.colstack, .topic_item {
	display: flex;
}

.topic_item .topic_name_forum_sep {
	font-size: 20px;
	line-height: 30px;
	margin-left: 7px;
	margin-right: 7px;
}
.topic_item .topic_forum {
	font-size: 19px;
	line-height: 31px;
	color: #cccccc;
}
.topic_view_count {
	font-size: 17px;
	margin-left: auto;
	margin-right: 20px;
	margin-top: 6px;
}
.topic_view_count:after {
	content: "{{index .Phrases "topic.view_count_suffix"}}";
}
.topic_name_input {
	width: 100%;
	margin-right: 12px;
}
.topic_item .submit_edit {
	margin-right: 16px;
}
.postImage {
	width: 100%;
	max-width: 320px;
}
.post_item {
	display: flex;
	margin-bottom: 12px;
}
.userinfo {
	margin-right: 12px;
	padding: 24px;
	padding-bottom: 16px;
	background-color: #444444;
	border-radius: 3px;
	width: 150px;
}
.userinfo, .user_meta {
	display: flex;
	flex-direction: column;
}
.avatar_item {
	border-radius: 36px;
	height: 58px;
	width: 58px;
	background-size: 78px;
	margin-left: auto;
	margin-right: auto;
}
.the_name {
	margin-left: auto;
	margin-right: auto;
	white-space: nowrap;
	display: block;
	font-size: 18px;
    margin-top: 8px;
    line-height: 16px;
}
.tag_block {
	display: flex;
}
/* ... */

